add price
