# routes/route.js
@@ -50,6 +50,7 @@ router.get('/products/search', product.search);
 router.post('/products/generic', product.generic);
 router.put('/products/interaction', product.updateMany);
 router.get('/products/getInfo', product.getInfo);
+router.get('/products/price', product.price);
 // .......................................................
 
 router.post('/price/getAll', price.getAll);
@@ -58,6 +59,7 @@ router.put('/price/update', price.update);
 router.delete('/price/delete', price.delete);
 router.post('/price/download', price.download);
 router.put('/price/updateFrom', price.updateFromTTAC);
+router.post('/price/updateIRC', fileUpload(), price.updateIRC);
 
 router.post('/products/category/getAll', category.getAll);
 router.post('/products/category/getOne', category.getOne);
