# swagger.json
@@ -1060,6 +1060,38 @@
         }
       }
     },
+    "/api/price/updateIRC": {
+      "post": {
+        "tags": [
+          "Price"
+        ],
+        "summary": "import update items from xlsx file",
+        "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "update",
+            "in": "formData",
+            "description": "Updated file of the product",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response"
+          },
+          "401": {
+            "description": "product validation failed"
+          }
+        }
+      }
+    },
     "/api/price/updateFrom": {
       "put": {
         "tags": [
